# ai-sandbox

./: README-MULTIPACKAGE.md  loader.py  package-lock.json  package.json  pnpm-workspace.yaml  server.js  validate.py
.github/workflows/: ci.yml
cli/php/: AgentLoader.php  main.php
cli/python/: agent_loader.py  main.py
cli/ruby/: agent_loader.rb  main.rb  rule
core/: shared_utils.py
multi-package-project/: Gemfile  composer.json  index.js  package-lock.json  package.json  pyproject.toml
multi-package-project/src/: main.py
multi-package-project/src/multi_package_project_python.egg-info/: PKG-INFO  SOURCES.txt
prompt/: prompt
prompt/learning/: self_improvement_prompt.yaml
role/self_improvement_agent/: role.yaml
rule/learning/: self_improvement_rules.md
tests/: test_self_improvement_agent.py
tool/learning/: batch_operations.yaml  error_analysis.yaml  feedback_loop.yaml  lifecycle_management.yaml  parallel_processing.yaml
