[project]
name = "multi-package-project-python"
version = "0.1.0"
description = "A Python component for the multi-package project."
authors = [
  { name = "Your Name", email = "your@example.com" }
]
dependencies = [
    "requests",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
requires-python = ">=3.8"